fix(style): change main-slider height unit
There is this problem where in mobiles the buttons get out of screen. My guess it changing the height from 100vh to 100% will fix that issue.

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 #main-slider {
-  height: 100vh;
+  height: 100%;
 }
 
 .slider-container {
